# cpp2_modules_ex1

./: readme.md
src/: CMakeLists.txt  hello_world.cpp2  module_cppm.cppm  module_test.cpp2  module_test_main.cpp2
